--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<link rel="icon" href="favicon.png">
-	<link rel="stylesheet" href="https://github.com/necolas/normalize.css">
+	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<link rel="stylesheet" href="./assets/css/nullstyle.css">
 </head>
@@ -21,48 +21,26 @@
 			<p class="main__title">Создание учетной записи <span>Oracle</span></p>
 			<p class="main__title--login">У Вас уже есть учетная запись Oracle? <a href="">Вход</a></p>
 			<form action="" method="get" class="main__reg-form reg-form">
+
 				<div class="reg-form__table--1">
-					<div class="reg-form__label label-email">Адрес электронной почты</div>
-					<input type="email" class="reg-form__input" id="email">
-					<p class="reg-form__details email-details">Ваш адрес электронной почты одновременно является Вашим именем пользователя.
+					<!-- <div class="reg-form__row"> -->
+						<div class="reg-form__label label-email">Адрес электронной почты</div>
+						<div class="input-email">
+							<input type="email" class="reg-form__input" id="email">
+							<div class="status-message">
+								<div class="img-div"><img src="./assets/images/checkcircle-s.svg" alt="nok"></div>
+								<div class="status-message__text"></div>
+							</div>
+						</div>
+						<p class="reg-form__details email-details">Ваш адрес электронной почты одновременно является Вашим именем пользователя.
 						</p>
+					<!-- </div> -->
 					<div class="reg-form__label label-pwd1">Пароль</div>
-					<input type="password1" class="reg-form__input" minlength="8" maxlength="50" id="password1">
+					<input type="password1" class="reg-form__input" minlength="8" maxlength="50" id="password1" autocomplete="new-password">
 					<div class="reg-form__label label-pwd2">Введите пароль еще раз</div>
 					<input type="password" class="reg-form__input" minlength="8" maxlength="50" id="password2">
-					<p class="reg-form__details pwd-details">Пароли должны быть не короче 8 символов, должны содержать буквы обоих регистров, а также хотя бы одну цифру и специальный символ. Они не должны совпадать с адресом электронной почты или содержать его часть.
-					</p>
-					<div class="reg-form__label label-country">Страна</div>
-					<select id="countries">
-						<option value="" title="-Выберите-">-Выберите-</option>
-						<option value="AQ" title="Антарктида">Антарктида</option>
-						<option value="BR" title="Бразилия">Бразилия</option>
-						<option value="KZ" title="Казахстан">Казахстан</option>
-						<option value="SK" title="Словакия (Словацкая Республика)">Словакия</option>
-						<option value="UA" title="Украина">Украина</option>
-						<option value="FI" title="Финляндия">Финляндия</option>
-					</select>
-				</div>
-
-				<!-- <div class="reg-form__table--2">
-					<div class="reg-form__label label-name">Имя</div>
-					<input type="text" class="reg-form__input reg-form__input--name" id="first-name" placeholder="Имя">
-					<input type="text" class="reg-form__input reg-form__input--name" id="family-name" placeholder="Фамилия">
-					<p class="reg-form__details name-details">
-					</p>
-				</div> -->
-
-
-				<div class="reg-form__table--1">
-					<div class="reg-form__label label-email">Адрес электронной почты</div>
-					<input type="email" class="reg-form__input" id="email">
-					<p class="reg-form__details email-details">Ваш адрес электронной почты одновременно является Вашим именем пользователя.
-					</p>
-					<div class="reg-form__label label-pwd1">Пароль</div>
-					<input type="password1" class="reg-form__input" minlength="8" maxlength="50" id="password1">
-					<div class="reg-form__label label-pwd2">Введите пароль еще раз</div>
-					<input type="password" class="reg-form__input" minlength="8" maxlength="50" id="password2">
-					<p class="reg-form__details pwd-details">Пароли должны быть не короче 8 символов, должны содержать буквы обоих регистров, а также хотя бы одну цифру и специальный символ. Они не должны совпадать с адресом электронной почты или содержать его
+					<p class="reg-form__details pwd-details">Пароли должны быть не короче 8 символов, должны содержать буквы обоих регистров, а также хотя бы одну цифру и специальный символ. Они не должны совпадать с адресом электронной почты или
+						содержать его
 						часть.
 					</p>
 					<div class="reg-form__label label-country">Страна</div>
@@ -77,6 +55,59 @@
 					</select>
 				</div>
 
+
+
+				<!-- <div class="reg-form__table--1">
+					<div class="reg-form__label label-email">Адрес электронной почты</div>
+					<input type="email" class="reg-form__input" id="email">
+					<p class="reg-form__details email-details">Ваш адрес электронной почты одновременно является Вашим именем пользователя.
+					</p>
+					<div class="reg-form__label label-pwd1">Пароль</div>
+					<input type="password1" class="reg-form__input" minlength="8" maxlength="50" id="password1" autocomplete="new-password">
+					<div class="reg-form__label label-pwd2">Введите пароль еще раз</div>
+					<input type="password" class="reg-form__input" minlength="8" maxlength="50" id="password2">
+					<p class="reg-form__details pwd-details">Пароли должны быть не короче 8 символов, должны содержать буквы обоих регистров, а также хотя бы одну цифру и специальный символ. Они не должны совпадать с адресом электронной почты или
+						содержать его часть.
+					</p>
+					<div class="reg-form__label label-country">Страна</div>
+					<select id="countries">
+						<option value="" title="-Выберите-">-Выберите-</option>
+						<option value="AQ" title="Антарктида">Антарктида</option>
+						<option value="BR" title="Бразилия">Бразилия</option>
+						<option value="KZ" title="Казахстан">Казахстан</option>
+						<option value="SK" title="Словакия (Словацкая Республика)">Словакия</option>
+						<option value="UA" title="Украина">Украина</option>
+						<option value="FI" title="Финляндия">Финляндия</option>
+					</select>
+				</div> -->
+
+				<div class="reg-form__table--2">
+					<div class="reg-form__label label-name">Имя</div>
+					<input type="text" class="reg-form__input reg-form__input--name" id="first-name" placeholder="Имя">
+					<input type="text" class="reg-form__input reg-form__input--name" id="family-name" placeholder="Фамилия">
+					<p class="reg-form__details name-details">
+					</p>
+				</div>
+
+				<div class="reg-form__table--3">
+					<div class="reg-form__label label-position">Наименование должности</div>
+					<input type="text" class="reg-form__input" minlength="3" maxlength="60" id="position">
+					<div class="reg-form__label label-tel">Рабочий телефон</div>
+					<input type="tel" class="reg-form__input" id="tel">
+					<div class="reg-form__label label-company">Название компании</div>
+					<input type="text" class="reg-form__input" minlength="2" maxlength="50" id="company">
+				</div>
+
+				<div class="reg-form__table--4 reg-form__agreement agreement">
+					<div class="empty"></div>
+					<p class="agreement__policy">Использование веб-сайта Oracle осуществляется в соответствии с условиями использования Oracle.com и политикой конфиденциальности Oracle.</p>
+					<div class="agreement__checkbox-wrapper">
+						<input class="agreement__checkbox" type="checkbox" name="agreement" id="agreement">
+						<p class="agreement__text">Я понимаю и принимаю вышеизложенные условия</p>
+					</div>
+					<button class="button" type="submit">Создать учетную запись</button>
+				</div>
+
 			</form>
 
 
@@ -86,7 +117,7 @@
 		<footer class="footer"></footer>
 	</div>
 
-
+	<script src="./assets/js/script.js"></script>
 
 </body>
 
