--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<link rel="icon" href="favicon.png">
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-	<link rel="stylesheet" href="./assets/css/style.css">
-	<link rel="stylesheet" href="./assets/css/nullstyle.css">
+	<link rel="stylesheet" href="./assets/scss/dist/nullstyle.css">
+	<link rel="stylesheet" href="./assets/scss/dist/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 					<div class="input-email">
 						<input type="email" class="reg-form__input" id="email">
 						<div class="status-message email-status">
-							<div class="img-div"><img src="./assets/images/checkcircle-s.svg" alt="nok"></div>
+							<div class="img-div"><img class="" src="./assets/images/checkcircle-s.svg" alt="nok"></div>
 							<div class="status-message__text"></div>
 						</div>
 					</div>
@@ -39,7 +39,7 @@
 					<div class="input-password1">
 						<input type="password" class="reg-form__input" minlength="8" maxlength="50" id="password1" autocomplete="new-password">
 						<div class="status-message password1-status">
-							<div class="img-div"><img src="./assets/images/checkcircle-s.svg" alt="nok"></div>
+							<div class="img-div"><img class="" src="./assets/images/checkcircle-s.svg" alt="nok"></div>
 							<div class="status-message__text"></div>
 						</div>
 					</div>
