--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		</main>
 		<footer class="footer"></footer>
 	</div>
-
+	<script src="./assets/js/validation.js"></script>
 	<script src="./assets/js/script.js"></script>
 
 </body>
