improved email validation

--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
 							<div class="status-message__text"></div>
 						</div>
 					</div>
-					<p class="reg-form__details pwd-details">Пароли должны быть не короче 8 символов, должны содержать буквы обоих регистров, а также хотя бы одну цифру и специальный символ. Они не должны совпадать с адресом электронной почты или
+					<p class="reg-form__details pwd-details">
+
+						Пароли должны быть не короче 8 символов, должны содержать буквы обоих регистров, а также хотя бы одну цифру и специальный символ. Они не должны совпадать с адресом электронной почты или
 						содержать его
-						часть.
+						часть. <br> [0-9A-Za-z$#_-.]
+
 					</p>
 					<div class="reg-form__label label-country">Страна</div>
 					<div class="input-countries">
